# tg-pilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_EN.md  alembic.ini  bandit_report.json  bandit_report_recheck.json  docker-compose.panel.yml  docker-compose.yml  find_quote_lines.py  find_quotes.py  git_show_head.txt  git_show_head1.txt  linear_mockup_dashboard_v2.html  pyproject.toml
.agent/: mcp_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_zh.md
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 202603190001_baseline.py  202603190002_phase2_state_and_audit.py  202603190003_phase3_unified_metadata.py  202603210001_daily_task_runs.py  202603210002_daily_task_run_retry_fields.py
backend/: main.py
backend/adapters/: __init__.py  tg_signer.py
backend/cli/: migrate.py  signer.py  tasks.py
backend/contracts/: __init__.py  dtos.py  interfaces.py
backend/core/: auth.py  config.py  database.py  migrations.py  security.py
backend/models/: __init__.py  account.py  audit_event.py  daily_task_run.py  login_session_state.py  sign_task.py  task.py  task_log.py  user.py
backend/scheduler/: __init__.py
backend/schemas/: account.py  auth.py  task.py  task_log.py
backend/services/: audit.py  bot_notify.py  config.py  daily_dispatcher.py  daily_planner.py  legacy_migration.py  login_sessions.py  operations.py  sign_tasks.py  tasks.py  telegram.py  update_check.py  users.py
backend/stores/: __init__.py  accounts.py  daily_task_runs.py  (+4 more)
docker/: entrypoint.sh
docs/: architecture.md  stage-gates.md
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts
tests/: conftest.py  test_audit.py  test_auth.py  test_config_service.py  test_daily_dispatcher.py  test_daily_planner.py  test_daily_task_run_store.py  test_login_sessions.py  test_migration_compat.py  test_operations.py  test_phase3_data_model.py  test_scheduler.py  test_sign_config_compat.py  test_sign_task_api.py  test_sign_task_store.py  test_telegram_status.py  test_tg_signer_adapter.py  test_update_check_service.py
tg_signer/: ai_tools.py  config.py  core.py
tools/: migrate_session.py
(+77 files in other folders)
