[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TG-Pilot"
dynamic = ["version"]
description = "Automated Telegram tasks (check-ins, sending messages, keyboard clicks, AI replies, etc.); monitoring, forwarding, and auto-replying to private, group, and channel messages."
authors = [
    { name = "jikssha" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "alembic",
    "kurigram<=2.2.7",
    "click",
    "pydantic<2",
    "openai",
    "croniter",
    "json_repair",
    "typing-extensions",
    "httpx",
    "fastapi>=0.109.2",
    "uvicorn[standard]",
    "sqlalchemy",
    "apscheduler",
    "python-jose[cryptography]",
    "python-multipart",
    "pyotp",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "qrcode[pil]",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "tox>=4.32.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
speedup = [
    "tgcrypto"
]
gui = [
    "nicegui"
]

[project.urls]
Homepage = "https://github.com/jikssha/tg-pilot"
Repository = "https://github.com/jikssha/tg-pilot"

[project.scripts]
tg-pilot = "tg_signer.__main__:signer"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "tg_signer.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "B", # flake8-bugbear
    "W", # pycodestyle
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B019", # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "B904"  # raise without from inside except
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
